--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "coverage": "phpunit --coverage-clover clover.xml"
   },
   "require": {
-    "php": ">=5.4"
+    "php": ">=5.4",
+    "mantoufan/yzhancache": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
